# autopilot

./: README.md  dependencies.rosinstall
arc_interface/: CMakeLists.txt  README.md  package.xml  package.xml~
arc_interface/launch/: lift_presentation.launch~  lift_presentation_laser.launch
arc_interface/src/: lift_presentation.cpp  lift_presentation_laser.cpp  udp_client.cpp
arc_interface/test/: controller_test.cpp  conversion_test.cpp  sent_udp.sh
arc_interface/test/launch/: controller_test.launch  controller_test.launch~  steering_test.launch~
arc_launch/: CMakeLists.txt  README.md  arc.launch  arc.sh  arc.yaml  arc_teach.sh  package.xml
arc_launch/src/: preparation.cpp
arc_msgs/: CMakeLists.txt  README.md  package.xml  package.xml~
arc_msgs/msg/: State.msg
arc_obstacle_detection/: CMakeLists.txt~  README.md  package.xml  package.xml~
arc_obstacle_detection/include/arc_obstacle_detection/: obstacle_detection.hpp
arc_obstacle_detection/launch/: obstacle_detection.launch  obstacle_detection.launch~
arc_obstacle_detection/src/: obstacle_detection.cpp  obstacle_detection.cpp~  obstacle_detection_node.cpp
arc_presentation/: CMakeLists.txt  README.md  lift_auto_start.sh  package.xml  package.xml~
arc_presentation/launch/: lift_presentation.launch
arc_presentation/src/: lift_presentation.cpp
arc_state_estimation/: package.xml
arc_tools/: CMakeLists.txt  README.md  package.xml
arc_tools/include/arc_tools/: coordinate_transform.hpp  tf_kit.hpp  timing.hpp
arc_tools/src/: coordinate_transform.cpp  tf_kit.cpp  timing.cpp
arc_tools/test/: Mapplot.py
arc_viewer/: CMakeLists.txt  README.md  package.xml  package.xml~
arc_viewer/qt_resources/: arc.qrc  stop.qrc
arc_viewer/src/: ControlWindow.cpp  ControlWindow.hpp  RosInterface.cpp  RosInterface.hpp  gui.cpp  pdf_analyse.py  play_voice.py  ps_control.cpp
grid_analyser/src/: gridAnalyser.cpp
pure_pursuit_controller/src/: pure_pursuit_controller.cpp
