<?xml version="1.0"?>
<package>
  <name>arc_interface</name>
  <version>0.0.0</version>
  <description>The arc_interface package</description>
  <maintainer email="arcsystem@todo.todo">nicholas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>arc_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend> 
  <run_depend>arc_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>


</package>
