<?xml version="1.0"?>
<package>
 	<name>arc_launch</name>
 	<version>0.0.0</version>
  	<description>The arc_launch package</description>

  	<maintainer email="sele@todo.todo">sele</maintainer>
  	<license>TODO</license>

  	<buildtool_depend>catkin</buildtool_depend>

  	<build_depend>roscpp</build_depend>
	<build_depend>eigen_catkin</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
 
  	<run_depend>roscpp</run_depend>
	<run_depend>eigen_catkin</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	
</package>
